# Encryption-Named-Pipe

./: CMakeLists.txt  README.md  decoder  decoder.c  file_decoder.txt  finder  finder.c  main  main.c  placer  placer.c  temp  temp.c
files/: file_decoder.txt  input.txt  output.txt  placer.txt  result.txt
